tests/paczka1/fuzzy1/63183024.err
Error in line 7: 11s68V A322 11,6
Error in line 3: 22ADm5Jp S801 26,5
Error in line 1: JzhWvsWZ S21 55,0
Error in line 33: Eyjik S21 80,7
